--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -106,7 +106,7 @@
       "phone": "Phone Number",
       "message": "Message",
       "send": "Send",
-      "post_success": "Thanks for contacting us. We'll get back to you as soon as possible."
+      "post_success": "Thanks for reaching out! I'll get back to you as soon as possible."
     }
   },
   "customer": {
